SERVER-65499 Fix storing int64 max as int128 in BSONColumnBuilder

Correctly detect that this value is out-of-range for storage in Simple8b