src/mongo/bson/util/simple8b.cpp
@@ -257,7 +257,12 @@ uint8_t _countTrailingZerosWithZero(uint128_t value) {
 uint8_t _countBitsWithoutLeadingZeros(uint128_t value) {
     uint64_t high = absl::Uint128High64(value);
     if (high == 0) {
-        return _countBitsWithoutLeadingZeros(static_cast<uint64_t>(value));
+        uint64_t low = absl::Uint128Low64(value);
+        // We can't call _countBitsWithoutLeadingZeros() with numeric_limits<uint64_t>::max as it
+        // would overflow and yield the wrong result. Just return the correct value instead.
+        if (low == std::numeric_limits<uint64_t>::max())
+            return 65;
+        return _countBitsWithoutLeadingZeros(low);
     } else {
         return 128 - countLeadingZerosNonZero64(high);
     }
